(fixes #2799, BP from #2362) fixed CSS to buttons spacing of tinymce-toolbar for IE6/7, and fixed the color-palette of text-mode not to depend on position-property-value of element of ancestors.

--- a/plugins/opSkinBasicPlugin/web/css/main.css
+++ b/plugins/opSkinBasicPlugin/web/css/main.css
@@ -1333,6 +1333,7 @@ ol.activities li.activity .info {
  * toolbar of opWidgetFormRichTextareaOpenPNE
  *----------------------------------------------------------------------------*/
 div.parts table.mceToolbar {
+  table-layout: auto;
   width: auto;
 }
 
